--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -59,8 +59,8 @@
         <%= @blog.body %>
         <!-- body部分 ここまで -->
       </p>
-      <a href="#">編集</a>
-      <a href="#">削除</a>
+      <%= link_to "編集", edit_blog_path(@blog) %>
+      <a href="#">削除</%>
       <div class="author-case clearfix">
         <div class="author-image"></div>
         <div class="author-box">
